2008-01-11  Andreas Røsdal  <andreasr@gnome.org>

	* /glade/glchess.glade: Move "View logs" to "View" menu. Patch from me in 
	bug #499519.

2008-01-10  Andreas Røsdal  <andreasr@gnome.org>

	* src/glchess.in:
	* src/glchess.in.in:
	* src/lib/defaults.py.in: Allow glChess to be run from source distribution, without
	requiring a full install. To run glChess from the source distribution, 
	simply execute make and then: $ python glchess/src/glchess

2007-12-27  Robert Ancell  <robert.ancell@gmail.com>

	* Fix bugs in SAN move generation (correctly record takes for en passant, show check hints for
	  castling, don't treat promotion as a take)
	* Support resigning in saved games
	* Stop players from moving after the game has completed

2007-12-24  Robert Ancell  <robert.ancell@gmail.com>

	* lib/scene/opengl/opengl.py: Mark animation as complete when pieces are deleted (fixes game
	  history crash reported in bug #488525)
        * lib/game.py: Use LAN move if unable to generate SAN move (Bug #445772)

2007-08-12  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/scene-cairo/__init__.py: Mark board numbers for translation,
	reported in Bug #471238.

2007-11-17  Robert Ancell  <robert.ancell@gmail.com>

	* lib/gtkui/gtkui.py: Set toolbar style to default system style (Glade 2 bug) (Bug #497504)
       	* lib/main.py: Choose AI for default game from first detected AI not first known AI (Bug #497404)

2007-11-09  Robert Ancell  <robert.ancell@gmail.com>

	* Put an asterisk in the title bar for games that need saving (Bug #494847)
	* lib/chess/pgn.py: Sped up PGN decoder by approximately 40%
	* data/ai.xml: Add support for Toga II engine (Launchpad bug #161753)

2007-11-08  Robert Ancell  <robert.ancell@gmail.com>

	* lib/main.py: If no game on startup start default game of human vs AI (Bug #446950)
        * lib/gtkui/dialogs.py: Fix overzealous game name autogeneration (Bug #479445)