@@ -1,3 +1,7 @@
+2008-01-12  Andreas Røsdal  <andreasr@gnome.org>
+
+	* src/glchess.in.in: Port bugfix #406672 from sudoku to glChess.
+
 2008-01-11  Andreas Røsdal  <andreasr@gnome.org>
 
 	* /glade/glchess.glade: Move "View logs" to "View" menu. Patch from me in 
